add links to go to universities and students index

--- a/app/views/scholarships/index.html.erb
+++ b/app/views/scholarships/index.html.erb
@@ -1,3 +1,10 @@
+<nav>
+  <ul>
+    <li><%= link_to "Universities", universities_path %></li>
+    <li><%= link_to "Students", students_path %></li>
+  </ul>
+</nav>
+
 <h1>Listing scholarships</h1>
 
 <table>
