--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,3 +1,9 @@
+<nav>
+  <ul>
+    <li><%= link_to "Scholarships", scholarships_path %></li>
+  </ul>
+</nav>
+
 <h1>Listing students</h1>
 
 <table>
