added a couple links

--- a/app/views/universities/index.html.erb
+++ b/app/views/universities/index.html.erb
@@ -1,6 +1,7 @@
 <nav>
   <ul>
     <li><%= link_to "Scholarships", scholarships_path %></li>
+    <li><%= link_to "Students", students_path %></li>
   </ul>
 </nav>
 
